Fixing issue with spacing in sort header
And removing backround color when the sort link is clicked.

--- a/app/assets/stylesheets/local/tables.scss
+++ b/app/assets/stylesheets/local/tables.scss
@@ -67,6 +67,10 @@ table.search-results {
   }
   th a {
     text-decoration: none;
+    padding-right: 10px;
+  }
+  th.sort_arrows a:focus, th.sort_arrow_desc a:focus, th.sort_arrow_asc a:focus, {
+    background-color: white !important;
   }
 
   th.sort_arrows a:after {
